<resources>
    <string name="app_name">Service_Novigrad</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="role_administrator_employee_or_customer">Role (Administrator, Employee or Customer)</string>
    <string name="welcome_to_service_novigrad">Welcome To Service Novigrad!</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="role">Role:</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="services">Services</string>
    <string name="accounts">Accounts</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="select_one_of_the_following">Select one of the following:</string>
    <string name="manage_office_hours">Manage Office Hours</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="search">Search:</string>
    <string-array name="rolesAdmin">
        <item>Administrator</item>
        <item>Employee</item>
        <item>Customer</item>
    </string-array>
    <string-array name="roles">
        <item>Customer</item>
        <item>Employee</item>
    </string-array>
    <string-array name="licenseType">
        <item>G</item>
        <item>G2</item>
        <item>G1</item>
    </string-array>
    <string-array name="serviceType">
        <item>Health Card</item>
        <item>Drivers License</item>
        <item>Photo Id</item>
    </string-array>
    <string-array name="formItem">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Address</item>
        <item>Birthday</item>
        <item>Address</item>
        <item>Proof of residency</item>
        <item>Proof of status</item>
        <item>Photo of yourself</item>
    </string-array>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>