...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="loginUser"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:onClick="goToRegister"
            android:text="Don't have an account? Register Here"
...
