<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvID"
        android:text="Id"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/etServiceName"
        android:text="Service Name"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btEditService"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#0288D1"
            android:text="Edit" />

        <Button
            android:id="@+id/btDeleteService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#D32F2F"
            android:text="Delete" />

        <Button
            android:id="@+id/bAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#959595"
            android:text="Add" />

    </LinearLayout>
    <View
        android:layout_margin="5dp"
        android:background="#00ffff"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>